oop_mro/tests/trybuild/fail_downcast_unrelated.stderr
error[E0277]: the trait bound `Animal: OopDynBoxDowncast<Vehicle>` is not satisfied
  --> tests/trybuild/fail_downcast_unrelated.rs:26:20
   |
26 |     let _ = animal.downcast::<dyn AsClass<Vehicle>>();
   |                    ^^^^^^^^ unsatisfied trait bound
   |
help: the trait `OopDynBoxDowncast<Vehicle>` is not implemented for `Animal`
      but trait `OopDynBoxDowncast<Dog>` is implemented for it
  --> tests/trybuild/fail_downcast_unrelated.rs:3:1
   |
 3 | / oop_class! {
 4 | |     class Animal {
 5 | |         virtual fn speak(&self) -> &'static str {
 6 | |             "animal"
...  |
10 | |     class Dog: Animal {
   | |_____________________^
   = help: for that trait implementation, expected `Dog`, found `Vehicle`
   = note: required for `dyn oop_mro::AsClass<Animal>` to implement `OopBoxDowncastTarget<dyn oop_mro::AsClass<Vehicle>>`
note: required by a bound in `downcast`
  --> src/lib.rs
   |
   |     fn downcast<Target: ?Sized>(self: Box<Self>) -> Result<Box<Target>, Box<Self>>
   |        -------- required by a bound in this associated function
   |     where
   |         Self: OopBoxDowncastTarget<Target>,
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `OopBoxDowncast::downcast`
   = note: this error originates in the macro `oop_class` (in Nightly builds, run with -Z macro-backtrace for more info)
